@@ -26,6 +26,7 @@
        <a href="membership.html">Membership</a> :&nbsp;
        <a href="elections.html">Elections</a> :&nbsp;
        <a href="directory.html">Directory</a> 
+       <a href="http://www.gnome.org/friends/">Fundraising</a> 
       </center>
      </td>
     </tr>
@@ -61,10 +62,17 @@
 <a NAME="News"></a><b>News</b>: 
 <ul>
  <li>
+ <strong>Friends of GNOME Fundraising Program</strong>
+ <small>(07/17/2002)</small>
+ <blockquote>
+	 The Friends of GNOME program has been launched to help raise funds for development, education and promotion for GNOME worldwide. The <a href="http://www.gnome.org/summit/">GNOME Summit</a> is one event which is supported through the generosity of this program. 
+ </blockquote>
+ </li>
+ <li>
  <strong>Results of 2001 election official</strong>
  <small>(12/07/2001)</small>
  <blockquote>
- The GNOME Foundation Membership & Elections Committee are pleased to announce the following members 
+	 The GNOME Foundation Membership &amp; Elections Committee are pleased to announce the following members 
  as official Foundation board directors for the 2001/2002 term of office - <BR>
  Jonathan Blandford, Miguel de Icaza, Nat Friedman, Jim Gettys, Jody Goldberg, Telsa Gwynne,
  James Henstridge, George Lebl, Federico Mena-Quintero, Havoc Pennington and Daniel Veillard. 
