@@ -26,6 +26,7 @@
        <a href="membership.html">Membership</a> :&nbsp;
        <a href="elections.html">Elections</a> :&nbsp;
        <a href="directory.html">Directory</a>
+       <a href="http://www.gnome.org/friends/">Fundraising</a>
       </center>
      </td>
     </tr>
